# xray

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev.server  LICENSE  NOTICE  README.md  compose.dev.yaml  drizzle.config.ts  package.json  vitest.config.ts
.github/workflows/: publish.yml  secret-scan.yml  supply-chain.yml  test-python-sdk.yml  test.yml
docs/: SDK.md  architecture.md  integrate.md
examples/livekit-voice-agent/: .gitignore  README.md  compose.yaml  livekit.yaml
examples/livekit-voice-agent/agent/: Dockerfile  main.py  pyproject.toml
examples/livekit-voice-agent/driver/: Dockerfile  pyproject.toml  test_e2e.py
scripts/: agent-webhook-realtime.ts  docker-smoke.sh  license-check.ts  seed.ts
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: booking_happy_path.py
sdk/python/tests/: test_conversation.py  test_errors.py  test_live_runtime.py  test_livekit_runtime.py  test_mint_user_token.py  test_orchestrator.py  test_real_server.py  test_sip.py  test_trace.py
snapshot/: xray.db
src/: app.tsx
src/adapters/adapter/: test-utils.ts  types.ts
src/adapters/agent/: test-utils.ts  types.ts
src/adapters/conversation/: test-utils.ts  types.ts
src/adapters/errors/: errors.ts
src/adapters/live-session/: test-utils.ts  types.ts
src/adapters/provider/: test-utils.ts  types.ts
src/adapters/registry/: registry.test.ts  registry.ts  test-utils.ts
src/conversations/: conversations.test.tsx  conversations.tsx  errors.test.ts  errors.ts
src/server/: server.ts
tests/fixtures/: hash-parity.json
(+81 files in other folders)
