[project]
name = "xray-example-voice-agent"
version = "0.0.0"
description = "Minimal LiveKit Agents worker wired to xray (example)."
requires-python = ">=3.10"
dependencies = [
  "livekit-agents>=1.5,<2",
  "livekit-plugins-google>=1.5,<2",
  "langfuse>=3,<4",
  # xray-py installed editable from ../../sdk/python in the Dockerfile.
]
